# fastpy

./: CMakeLists.txt  README.md  build.py  main.py  requirements.txt
include/fastpy/: array.hpp  cuda.hpp
include/functions/add/: add.hpp  utils.hpp
include/functions/matmul/: matmul.hpp  utils.hpp
src/: fastpy.pybind.cpp
src/fastpy/: array.cpp  cuda.cu
src/functions/add/: add.cu  utils.cpp
src/functions/matmul/: matmul.cu  utils.cpp
